--- a/scrimba/index.html
+++ b/scrimba/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+    </div>
     
     <script src="./js/script.js"></script>
 </body>
