--- a/scrimba/index.html
+++ b/scrimba/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div>1</div>
+        <div><a href="./simple-template.html">1</a></div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
