Add link to index.html

--- a/scrimba/simple-template.html
+++ b/scrimba/simple-template.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">HEADER</div>
+        <div class="header"><a href="./index.html">HEADER</a></div>
         <div class="menu">MENU</div>
         <div class="content">CONTENT</div>
         <div class="footer">FOOTER</div>
