--- a/scrimba/index.html
+++ b/scrimba/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/basic.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div><a href="./simple-template.html">1</a></div>
@@ -15,8 +17,15 @@
         <div>4</div>
         <div>5</div>
         <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
+        <div>10</div>
+        <div>11</div>
+        <div>12</div>
     </div>
-    
+
     <script src="./js/script.js"></script>
 </body>
+
 </html>
