--- a/scrimba/index.html
+++ b/scrimba/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div><a href="./simple-template.html">1</a></div>
-        <div>2</div>
+        <div><a href="./image-grid.html">2</a></div>
         <div>3</div>
         <div>4</div>
         <div>5</div>
