--- a/scrimba/image-grid.html
+++ b/scrimba/image-grid.html
@@ -27,6 +27,10 @@
         <div class="big"><img src="./images/big3.jpg"/></div>
         <div><img src="./images/normal9.jpg"/></div>
         <div class="vertical"><img src="./images/vertical3.jpg"/></div>
+        <div><img src="./images/normal2.jpg"/></div>
+        <div><img src="./images/normal3.jpg"/></div>
+        <div><img src="./images/normal4.jpg"/></div>
+        <div><img src="./images/normal7.jpg"/></div>
     </div>
 </body>
 </html>
