Refactor simple template to use grid & flexbox

--- a/scrimba/simple-template.html
+++ b/scrimba/simple-template.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Web Template</title>
-    <link rel="stylesheet" href="./css/basic.css">
+    <!-- <link rel="stylesheet" href="./css/basic.css"> -->
     <link rel="stylesheet" href="./css/simple-template.css">
 </head>
 <body>
     <div class="container">
-        <div class="header"><a href="./index.html">HEADER</a></div>
+        <!-- <div class="header"><a href="./index.html">HEADER</a></div> -->
+        <div class="flex-header">
+            <div><a href="./index.html">HOME</a></div>
+            <div>SEARCH</div>
+            <div class="logout">LOGOUT</div>
+        </div>
         <div class="menu">MENU</div>
         <div class="content">CONTENT</div>
         <div class="footer">FOOTER</div>
