--- a/scrimba/simple-template.html
+++ b/scrimba/simple-template.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./css/simple-template.css">
 </head>
 <body>
-    <div class="container">
-        <!-- <div class="header"><a href="./index.html">HEADER</a></div> -->
+    <div class="grid-container">
         <div class="flex-header">
             <div><a href="./index.html">HOME</a></div>
             <div>SEARCH</div>
